@@ -1,5 +1,9 @@
 2006-06-29  Gary Benson  <gbenson@redhat.com>
 
+	* java/io/File.java (listRoots): Merge security checks from libgcj.
+
+2006-06-29  Gary Benson  <gbenson@redhat.com>
+
 	* java/io/FilePermission.java (implies): Work when path is "/".
 
 2006-06-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>
